--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>William Onaka</title>
+  <title>Casameneto Patricia e Wiliam</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <header>
 	  <nav class="menu">
 		<ul>
-		  <li><a href="#">Sobre</a></li>
-		  <li><a href="#">Portfólio</a></li>
-		  <li><a href="#">Contato</a></li>
+		  <li><a href="#">O casal</a></li>
+		  <li><a href="#">Cerimônia</a></li>
+		  <li><a href="#">Caixinha</a></li>
 		</ul>
 	  </nav>
-	  <h1 class="site-title">William Onaka</h1>
-	  <h2 class="site-subtitle">Computer Scientist</h2>
+	  <h1 class="site-title">Casamento Patricia e William</h1>
+	  <h2 class="site-subtitle">SAVE THE DATE 09/09/2023</h2>
 	</header>
 </body>
