--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <header>
 	  <nav class="menu">
 		<ul>
-		  <li><a href="#">O casal</a></li>
-		  <li><a href="#">Cerimônia</a></li>
-		  <li><a href="#">Caixinha</a></li>
+		  <li><a href="history.html">O casal</a></li>
+		  <li><a href="ceremony.html">Cerimônia</a></li>
+		  <li><a href="gifts.html">Caixinha</a></li>
 		</ul>
 	  </nav>
 	  <h1 class="site-title">Casamento Patricia e William</h1>
