--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Casameneto Patricia e Wiliam</title>
+  <title>Casamento Patricia e Wiliam</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
